Update to fix intropanel from being covered by the results after selecting a property. Fix applied on line 92 on main.js

--- a/static/style/main.less
+++ b/static/style/main.less
@@ -176,11 +176,14 @@ a.header {
 
 
 div.results {
-   margin-left:50px;
+   width: 90%;
+   margin-left: 5%;
+   margin-right: 5%;
 }
     
 .result-text {
-   font-size: 17px;
+   font-size: .9rem;
+   
 }
     
 #progress {
